--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         name="keywords" />
     <meta content="Yasin Ullah, Pakistan" name="author" />
     <title>Prophet Muhammad (صلی اللہ علیہ و سلم) Islamic Hub</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-hijri/2.1.2/moment-hijri.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/leaflet/dist/leaflet.css" rel="stylesheet">
@@ -394,7 +397,7 @@
         <h1 class="animate__animated animate__fadeInDown">سیدنا محمد (صلی اللہ علیہ و سلم) اسلامی مرکز</h1>
         <div class="container-card animate__animated animate__fadeInUp" id="birthCountdown">
             <h2>ولادت کا وقت (Birth Countdown):</h2>
-            <div class="countdown-display" id="countdownBirth"></div>
+            <div class="countdown-display" id="countdownBirth" dir="rtl"></div>
             <div class="total-info" id="totalDaysMonthsBirth"></div>
             <h2>اگلی ولادت کی سالگرہ (Next Mawlid):</h2>
             <div class="countdown-display" id="nextMawlidCountdown"></div>
@@ -408,9 +411,9 @@
             <h2>وفات کا وقت (Death Countdown):</h2>
             <div class="countdown-display" id="countdownDeath"></div>
             <div class="total-info" id="totalDaysMonthsDeath"></div>
-            <h2>وفات کی اگلی سالگرہ (Next Death Anniversary):</h2>
-            <div class="countdown-display" id="nextDeathCountdown"></div>
-            <div class="mt-3">
+            <h2 style="display: none;">وفات کی اگلی سالگرہ (Next Death Anniversary):</h2>
+            <div style="display: none;" class="countdown-display" id="nextDeathCountdown"></div>
+            <div style="display: none;" class="mt-3">
                 <button class="btn btn-info share-buttons"
                     onclick="shareContent('nextDeathCountdown', 'وفات کی اگلی سالگرہ')"><i
                         class="fas fa-share-alt"></i></button>
@@ -839,15 +842,32 @@
                 day: Hday
             };
         }
+        // THIS IS THE CORRECTED FUNCTION
         function hijriToGregorian(hYear, hMonth, hDay) {
-            let i = Math.floor(11 * hYear + 3) / 30 + Math.floor(hMonth * 59 + 1) / 30 - Math.floor(11 * hYear + 3) / 30 + 1 + 29.5 * (hMonth - 1) + hDay;
-            let g = new Date(i * 86400000);
-            return g;
+            // A more accurate algorithm based on the Julian Day Number conversion
+            let jd = Math.floor((11 * hYear + 3) / 30) + (354 * hYear) + (30 * hMonth) - Math.floor((hMonth - 1) / 2) + hDay + 1948440 - 385;
+            let l = jd + 68569;
+            let n = Math.floor((4 * l) / 146097);
+            l = l - Math.floor((146097 * n + 3) / 4);
+            let i = Math.floor((4000 * (l + 1)) / 1461001);
+            l = l - Math.floor((1461 * i) / 4) + 31;
+            let j = Math.floor((80 * l) / 2447);
+            let day = l - Math.floor((2447 * j) / 80);
+            l = Math.floor(j / 11);
+            let month = j + 2 - (12 * l);
+            let year = 100 * (n - 49) + i + l;
+
+            // Return a proper Date object (Note: JavaScript months are 0-11)
+            return new Date(year, month - 1, day);
         }
         const translations = {
             ur: {
                 "Prophet Muhammad (صلی اللہ علیہ و سلم) Islamic Hub": "سیدنا محمد (صلی اللہ علیہ و سلم) اسلامی مرکز",
                 "ولادت کا وقت (Birth Countdown)": "ولادت کا وقت",
+                "Settings": "ترتیبات",
+                "Backup": "بیک اپ",
+                "Restore": "بحال کریں",
+                "Remaining": "باقی",
                 "وفات کا وقت (Death Countdown)": "وفات کا وقت",
                 "اگلی ولادت کی سالگرہ (Next Mawlid)": "اگلی ولادت کی سالگرہ",
                 "وفات کی اگلی سالگرہ (Next Death Anniversary)": "وفات کی اگلی سالگرہ",
@@ -899,6 +919,10 @@
             en: {
                 "Prophet Muhammad (صلی اللہ علیہ و سلم) Islamic Hub": "Prophet Muhammad (PBUH) Islamic Hub",
                 "ولادت کا وقت (Birth Countdown)": "Time Since Birth",
+                "Settings": "Settings",
+                "Backup": "Backup",
+                "Restore": "Restore",
+                "Remaining": "Remaining",
                 "وفات کا وقت (Death Countdown)": "Time Since Death",
                 "اگلی ولادت کی سالگرہ (Next Mawlid)": "Next Birth Anniversary (Mawlid)",
                 "وفات کی اگلی سالگرہ (Next Death Anniversary)": "Next Death Anniversary",
@@ -951,6 +975,7 @@
                 "Prophet Muhammad (صلی اللہ علیہ و سلم) Islamic Hub": "المركز الإسلامي للنبي محمد (صلى الله عليه وسلم)",
                 "ولادت کا وقت (Birth Countdown)": "الوقت منذ الميلاد",
                 "وفات کا وقت (Death Countdown)": "الوقت منذ الوفاة",
+                "Remaining": "المتبقي",
                 "اگلی ولادت کی سالگرہ (Next Mawlid)": "المولد النبوي القادم",
                 "وفات کی اگلی سالگرہ (Next Death Anniversary)": "ذكرى الوفاة القادمة",
                 "آج سیرت میں (On This Day in Seerah)": "في مثل هذا اليوم من السيرة",
@@ -1002,6 +1027,7 @@
                 "Prophet Muhammad (صلی اللہ علیہ و سلم) Islamic Hub": "Pusat Islam Nabi Muhammad (SAW)",
                 "ولادت کا وقت (Birth Countdown)": "Waktu Sejak Kelahiran",
                 "وفات کا وقت (Death Countdown)": "Waktu Sejak Wafat",
+                "Remaining": "Tersisa",
                 "اگلی ولادت کی سالگرہ (Next Mawlid)": "Peringatan Maulid Nabi Berikutnya",
                 "وفات کی اگلی سالگرہ (Next Death Anniversary)": "Peringatan Wafat Nabi Berikutnya",
                 "آج سیرت میں (On This Day in Seerah)": "Hari Ini dalam Sirah Nabawiyah",
@@ -1102,9 +1128,9 @@
             document.querySelector('#navbarNav .nav-item:nth-child(5) .nav-link').textContent = translations[currentLanguage]["نبی اکرم (صلی اللہ علیہ و سلم) کے القاب (Names & Titles of the Prophet ﷺ)"];
             document.querySelector('#navbarNav .nav-item:nth-child(6) .nav-link').textContent = translations[currentLanguage]["اوقاتِ نماز (Prayer Times)"];
             document.querySelector('#navbarNav .nav-item:nth-child(7) .nav-link').textContent = translations[currentLanguage]["تاریخ کنورٹر (Date Converter)"];
-            document.querySelector('#navbarNav .nav-item:nth-child(8) .nav-link').textContent = 'Settings';
-            document.querySelector('#navbarNav .nav-item:nth-child(9) .nav-link').textContent = 'Backup';
-            document.querySelector('#navbarNav .nav-item:nth-child(10) .nav-link').textContent = 'Restore';
+            document.querySelector('#navbarNav .nav-item:nth-child(8) .nav-link').textContent = translations[currentLanguage]["Settings"];
+            document.querySelector('#navbarNav .nav-item:nth-child(9) .nav-link').textContent = translations[currentLanguage]["Backup"];
+            document.querySelector('#navbarNav .nav-item:nth-child(10) .nav-link').textContent = translations[currentLanguage]["Restore"];
             document.getElementById('theme-label').textContent = translations[currentLanguage]["تھیم (Theme)"];
             document.getElementById('font-size-label').textContent = translations[currentLanguage]["فونٹ سائز (Font Size)"];
             document.querySelector('#prayerTimesSection h2').textContent = translations[currentLanguage]["اوقاتِ نماز (Prayer Times)"];
@@ -1155,21 +1181,36 @@
             const totalMinutes = Math.floor(totalSeconds / 60);
             const totalHours = Math.floor(totalMinutes / 60);
             const totalDays = Math.floor(totalHours / 24);
-            const years = Math.floor(totalDays / 365.25);
-            const remainingDaysAfterYears = totalDays % 365.25;
-            const months = Math.floor(remainingDaysAfterYears / 30.44);
-            const remainingDaysAfterMonths = Math.floor(remainingDaysAfterYears % 30.44);
+
             const hours = totalHours % 24;
             const minutes = totalMinutes % 60;
             const seconds = totalSeconds % 60;
-            const sign = ms < 0 ? translations[currentLanguage]["باقی"] || "Remaining" : "";
-            return `${sign} ${years} ${translations[currentLanguage]["سال (Years)"]}
-                    ${months} ${translations[currentLanguage]["ماہ (Months)"]}
-                    ${remainingDaysAfterMonths} ${translations[currentLanguage]["دن (Days)"]}
-                    ${hours} ${translations[currentLanguage]["گھنٹے (Hours)"]}
-                    ${minutes} ${translations[currentLanguage]["منٹ (Minutes)"]}
-                    ${seconds} ${translations[currentLanguage]["سیکنڈ (Seconds)"]}`;
+
+            if (isCountdown) {
+                const years = Math.floor(totalDays / 365.25);
+                const remainingDaysAfterYears = totalDays % 365.25;
+                const months = Math.floor(remainingDaysAfterYears / 30.44);
+                const days = Math.floor(remainingDaysAfterYears % 30.44);
+
+                let result = "";
+                if (years > 0) {
+                    //result += `${years} سال `;
+                }
+
+                result += `${months} ماہ ${days} دن ${hours} گھنٹے ${minutes} منٹ ${seconds} سیکنڈ`;
+                return 'باقی ' + result;
+            }
+
+            // Normal "since birth/death" calculation
+            const years = Math.floor(totalDays / 365.25);
+            const remainingDaysAfterYears = totalDays % 365.25;
+            const months = Math.floor(remainingDaysAfterYears / 30.44);
+            const days = Math.floor(remainingDaysAfterYears % 30.44);
+
+            return `${years} سال ${months} ماہ ${days} دن ${hours} گھنٹے ${minutes} منٹ ${seconds} سیکنڈ`;
         }
+
+
         function calculateTotalDaysMonths(ms) {
             if (ms < 0) return `${translations[currentLanguage]["کل دن"]}: N/A, ${translations[currentLanguage]["کل ماہ"]}: N/A`;
             const totalDays = Math.floor(ms / (1000 * 60 * 60 * 24));
@@ -1193,25 +1234,70 @@
             displaySeerahEventToday();
         }
         function updateUpcomingAnniversaries() {
-            const today = new Date();
-            const todayHijri = gregorianToHijri(today);
-            let mawlidYear = todayHijri.year;
-            let mawlidDate = new Date(hijriToGregorian(mawlidYear, MAWLID_MONTH, MAWLID_DAY));
-            if (mawlidDate.getTime() < today.getTime()) {
-                mawlidYear++;
-                mawlidDate = new Date(hijriToGregorian(mawlidYear, MAWLID_MONTH, MAWLID_DAY));
+            const todayHijri = moment().clone().format('iYYYY/iM/iD').split('/').map(Number);
+            const [todayHijriYear, todayHijriMonth, todayHijriDay] = todayHijri;
+
+            const MAWLID_MONTH = 3; // ربیع الاول
+            const MAWLID_DAY = 12;
+
+            // اگلا mawlid کس سال میں آئے گا؟
+            let nextMawlidYear = todayHijriYear;
+            if (todayHijriMonth > MAWLID_MONTH || (todayHijriMonth === MAWLID_MONTH && todayHijriDay >= MAWLID_DAY)) {
+                nextMawlidYear += 1;
             }
-            const timeToMawlid = mawlidDate.getTime() - today.getTime();
-            document.getElementById("nextMawlidCountdown").innerHTML = formatTimeDifference(timeToMawlid, true);
-            let deathYear = todayHijri.year;
-            let deathDate = new Date(hijriToGregorian(deathYear, DEATH_ANNIVERSARY_MONTH, DEATH_ANNIVERSARY_DAY));
-            if (deathDate.getTime() < today.getTime()) {
-                deathYear++;
-                deathDate = new Date(hijriToGregorian(deathYear, DEATH_ANNIVERSARY_MONTH, DEATH_ANNIVERSARY_DAY));
-            }
-            const timeToDeath = deathDate.getTime() - today.getTime();
-            document.getElementById("nextDeathCountdown").innerHTML = formatTimeDifference(timeToDeath, true);
+
+            // moment-hijri سے اگلی تاریخ
+            const nextMawlid = moment(`${nextMawlidYear}-${MAWLID_MONTH}-${MAWLID_DAY}`, "iYYYY-iM-iD");
+
+            let msRemaining = nextMawlid.toDate().getTime() - Date.now();
+
+            // ✅ countdown version: صرف months/days/hours/minutes/seconds
+            document.getElementById("nextMawlidCountdown").innerHTML = formatTimeDifference(msRemaining, true);
         }
+
+        // نیا function خاص طور پر countdown کے لیے
+        function formatCountdown(ms) {
+            const absMs = Math.abs(ms);
+            const totalSeconds = Math.floor(absMs / 1000);
+            const totalMinutes = Math.floor(totalSeconds / 60);
+            const totalHours = Math.floor(totalMinutes / 60);
+            const totalDays = Math.floor(totalHours / 24);
+
+            const months = Math.floor(totalDays / 30);   // ہمیشہ max 11
+            const days = totalDays % 30;
+            const hours = totalHours % 24;
+            const minutes = totalMinutes % 60;
+            const seconds = totalSeconds % 60;
+
+            return `باقی ${months} ماہ ${days} دن ${hours} گھنٹے ${minutes} منٹ ${seconds} سیکنڈ`;
+        }
+
+        function convertGregorianToHijri() {
+            const gregorianDateStr = document.getElementById('gregorianToHijriInput').value;
+            if (gregorianDateStr) {
+                // Convert the input date to Hijri format
+                const hDate = moment(gregorianDateStr, 'YYYY-MM-DD').format('iD iMMMM iYYYY');
+                document.getElementById('convertedHijriDate').textContent = `${hDate} AH`;
+            } else {
+                document.getElementById('convertedHijriDate').textContent = 'Please enter a valid date.';
+            }
+        }
+
+        function convertHijriToGregorian() {
+            const hijriYear = parseInt(document.getElementById('hijriYearInput').value);
+            const hijriMonth = parseInt(document.getElementById('hijriMonthInput').value);
+            const hijriDay = parseInt(document.getElementById('hijriDayInput').value);
+            if (hijriYear && hijriMonth && hijriDay) {
+                // Create a Hijri date and convert it to Gregorian format
+                const gDate = moment(`${hijriYear}/${hijriMonth}/${hijriDay}`, 'iYYYY/iM/iD').format('MMMM D, YYYY');
+                document.getElementById('convertedGregorianDate').textContent = `Gregorian: ${gDate}`;
+            } else {
+                document.getElementById('convertedGregorianDate').textContent = 'Please enter all Hijri fields.';
+            }
+        }
+
+
+
         function displaySeerahEventToday() {
             const today = new Date();
             const todayHijri = gregorianToHijri(today);
@@ -1283,28 +1369,7 @@
             const eventDetailModal = new bootstrap.Modal(document.getElementById('eventDetailModal'));
             eventDetailModal.show();
         }
-        function convertGregorianToHijri() {
-            const gregorianDateStr = document.getElementById('gregorianToHijriInput').value;
-            if (gregorianDateStr) {
-                const gDate = new Date(gregorianDateStr + 'T00:00:00Z');
-                const hDate = gregorianToHijri(gDate);
-                const hijriMonthName = currentLanguage === 'ur' ? hijriMonths[hDate.month - 1] : hijriMonthsEn[hDate.month - 1];
-                document.getElementById('convertedHijriDate').textContent = `${hDate.day} ${hijriMonthName}, ${hDate.year} ہجری`;
-            } else {
-                document.getElementById('convertedHijriDate').textContent = 'براہ کرم تاریخ درج کریں۔';
-            }
-        }
-        function convertHijriToGregorian() {
-            const hijriYear = parseInt(document.getElementById('hijriYearInput').value);
-            const hijriMonth = parseInt(document.getElementById('hijriMonthInput').value);
-            const hijriDay = parseInt(document.getElementById('hijriDayInput').value);
-            if (hijriYear && hijriMonth && hijriDay) {
-                const gDate = hijriToGregorian(hijriYear, hijriMonth, hijriDay);
-                document.getElementById('convertedGregorianDate').textContent = `Gregorian: ${gDate.toLocaleDateString(currentLanguage === 'ur' ? 'ur-PK' : 'en-US')}`;
-            } else {
-                document.getElementById('convertedGregorianDate').textContent = 'براہ کرم تمام ہجری تاریخ درج کریں۔';
-            }
-        }
+
         let userLocation = null;
         let map = null;
         let marker = null;
@@ -1595,6 +1660,8 @@
             setInterval(updateCountdown, 1000);
             getPrayerTimes();
         });
+        document.querySelectorAll('*').forEach(el => el.setAttribute('dir', 'auto'));
+
     </script>
 
     <script type="module">
