--- a/offline.html
+++ b/offline.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html><head><meta charset="utf-8"/><title>Offline</title><link href="manifest.json" rel="manifest"/>
 <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head><body><h1>You are offline.</h1>
@@ -8,12 +9,12 @@
   const swUrl = './sw.js';
   const wb = new Workbox(swUrl);
 
-  wb.addEventListener('waiting', (event) => {
+  wb.addEventListener('waiting', () => {
     console.log('A new service worker is waiting to activate.');
     wb.messageSW({ type: 'SKIP_WAITING' });
   });
 
-  wb.addEventListener('controlling', (event) => {
+  wb.addEventListener('controlling', () => {
     console.log('The new service worker is now in control. Reloading page for updates...');
     window.location.reload();
   });
